--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -42,10 +42,17 @@
       <div class="navbar-inner">
         <div class="container_main">
           <a class="brand" href="{{ HOME_PATH }}">{{ site.title }}</a>
-          <ul class="nav">
+<!--           <ul class="nav">
             {% assign pages_list = site.weighted_pages %}
             {% assign group = 'navigation' %}
             {% include JB/pages_list %}
+          </ul> -->
+          <ul class="nav">
+            <li><a href="/animate.html">动画</a></li>
+            <li><a href="/manga.html">漫画</a></li>
+            <li><a href="/game.html">游戏</a></li>
+            <li><a href="/archive.html">档案</a></li>
+            <li><a href="/categories_list.html">分类列表</a></li>
           </ul>
         </div>
       </div>
@@ -68,7 +75,7 @@
             </ul>
           </div>
           <div class="dark_panel">
-            <h3>标签</h3>
+            <h3><a href="{{ site.JB.tag_path }}">标签</a></h3>
             <ul class="tag_box inline">
               {% assign tags_list = site.tags %}  
               {% include JB/tags_list %}
