update see change
update see change

--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -42,18 +42,19 @@
       <div class="navbar-inner">
         <div class="container_main">
           <a class="brand" href="{{ HOME_PATH }}">{{ site.title }}</a>
-<!--           <ul class="nav">
+          <ul class="nav">
             {% assign pages_list = site.weighted_pages %}
             {% assign group = 'navigation' %}
             {% include JB/pages_list %}
-          </ul> -->
-          <ul class="nav">
+          </ul>
+<!--           <ul class="nav">
             <li><a href="/animate.html">动画</a></li>
             <li><a href="/manga.html">漫画</a></li>
             <li><a href="/game.html">游戏</a></li>
+            <li><a href="/word.html">游戏</a></li>
             <li><a href="/archive.html">档案</a></li>
             <li><a href="/categories_list.html">分类列表</a></li>
-          </ul>
+          </ul> -->
         </div>
       </div>
     </div>
