--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -48,6 +48,7 @@
             {% include JB/pages_list %}
           </ul> -->
           <ul class="nav">
+            <li><a href="{{ HOME_PATH }}">首页</a></li>
             <li><a href="/animate.html">动画</a></li>
             <li><a href="/manga.html">漫画</a></li>
             <li><a href="/game.html">游戏</a></li>
