--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -69,13 +69,13 @@
           {{ content }}
         </div>
         <div class="sidebar span3">
-          <div class="dark_panel">
+<!--           <div class="dark_panel">
             <h3>标签列表</h3>
             <ul class="JB_tags">
               {% assign tags_list = site.tags %}  
               {% include JB/tags_list %}
             </ul>
-          </div>
+          </div> -->
           <div class="dark_panel">
             <h3><a href="{{ site.JB.tag_path }}">标签</a></h3>
             <ul class="tag_box inline">
