--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -19,8 +19,8 @@
     <link href="{{ ASSET_PATH }}/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="{{ ASSET_PATH }}/bootstrap/css/darkstrap.min.css" rel="stylesheet">
     <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
-    <script type="text/javascript" src="{{ ASSET_PATH }}/js/three.js"></script>
-    <script type="text/javascript" src="{{ ASSET_PATH }}/js/three2.js"></script>
+    <script type="text/javascript" src="assets/js/three.js"></script>
+    <script type="text/javascript" src="assets/js/three2.js"></script>
     <!-- Le fav and touch icons -->
   <!-- Update these with your own images
     <link rel="shortcut icon" href="images/favicon.ico">
