--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -110,6 +110,7 @@
 
     </div>
     <script type="text/javascript" src="assets/js/three.js"></script>
+    <script type="text/javascript" src="assets/js/three2.js"></script>
     {% include JB/analytics %}
   </body>
 </html>
